<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TestStub</string>

    <string name="event_tab_header">Events</string>
    <string name="cases_tab_header">Cases</string>
    <string name="custom_tab_header">Custom</string>
    <string name="info_tab_header">Info</string>

    <!-- Common -->
    <string name="button_track">Track</string>
    <string name="button_flush">Flush</string>
    <string name="button_pull">Pull</string>

    <!-- Event tab -->
    <string name="event_tab_hint_event_name">Name</string>

    <string name="event_tab_button_track_session">Track session</string>
    <string name="event_tab_button_clear">Clear</string>

    <!-- Cases tab -->
    <string name="cases_tab_hint_experiment_name">Experiment name</string>
    <string name="cases_tab_hint_group_name">Group name</string>
    <string name="cases_tab_hint_payment_usd">USD</string>
    <string name="cases_tab_hint_identify">User ID</string>

    <string name="cases_tab_button_track_experiment_start">Track start</string>
    <string name="cases_tab_button_track_experiment_end">Track end</string>
    <string name="cases_tab_button_track_payment">Track payment</string>
    <string name="cases_tab_button_identify">Identify</string>

    <!-- Custom tab -->
    <string name="custom_tab_button_add_property">Add</string>
    <string name="custom_tab_button_delete_property">Delete</string>

    <string name="custom_tab_hint_event_name">Event name</string>
    <string name="custom_tab_hint_property_name">Name</string>
    <string name="custom_tab_hint_property_value">Value</string>

    <!-- Info tab -->
    <string name="info_tab_prop_separator">: </string>
    <string name="info_tab_user_id">User id</string>
    <string name="info_tab_url">URL</string>
    <string name="info_tab_token">Token</string>
    <string name="info_tab_track_session">Track session by app</string>
    <string name="info_tab_track_install">Track install by app</string>
</resources>
